[package]
name = "ksm-regulator"
description = "KSM Regulator - is a daemon to automatically manage KSM"
readme = "README.md"
version = "0.1.0"
authors = ["Alik Aslanyan <cplusplus@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }
futures = {version = "0.3.8", default-features = false, features = ["alloc"]}
async-ctrlc = "^1"
serde-hjson = "0.9.1"
serde = "0.8.2"
serde_derive = "0.8.2"
anyhow = "^1"
itertools = "0.9.0"
ordered-float = "^1"
ordslice = "0.3.0"
sys-info = "0.7.0"
interpolation = "0.2.0"
log = "0.4.11"
stderrlog = "0.5.0"
structopt = "0.3.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
